hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_darray.php.exp
ERROR: File "disallow_hetergeneous_inputs_for_darray.php", line 4, characters 27-27:
A closing square bracket `]` is expected here. (Parsing[1002])
ERROR: File "disallow_hetergeneous_inputs_for_darray.php", line 4, characters 27-28:
Unbound name: `=>` (a global constant) (Naming[2049])
ERROR: File "disallow_hetergeneous_inputs_for_darray.php", line 4, characters 27-28:
Unbound global constant (Typing) (Typing[4106])
